--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,11 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: #e9eef6;
 }
 
 a {
@@ -14,3 +19,11 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.main-content {
+  height: auto;
+  width: 100;
+  padding: 2.5rem 3.5rem;
+  text-align: center;
+}
+
