--- a/components/ProductList/ProductItem/productItem.module.css
+++ b/components/ProductList/ProductItem/productItem.module.css
@@ -1,13 +1,82 @@
 .card{
-padding:  2rem 3rem;
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-border-radius: 0.5rem;
-background-color: #b3b2b2;
-color: steelblue;
+    width: 300px;
+   /* height: 350px; */
+   height: 100%;
+    margin: 10px 20px;
+    text-align: center;
+    
 }
-.productImg{
-    height: 200px;
+.card:hover{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+.cardHeader{
+    height: 75px;
+        margin-bottom: 20px;
+cursor: pointer;
+}
+.cardHeader span{
+    font-size: 14px !important;
+
+}
+.cardMedia{
+    width: 95% !important;
+    height: 280px  !important;
+    margin: auto;
+    object-fit: contain !important;
+    cursor: pointer;
+
+}
+
+
+.cardGrid{
+    justify-content: center;
+}
+.content{
+    height: 150px;
+}
+
+
+
+.cardAction{
+    border-top: 1px solid lightgray;
+    width: 100%;
+    height: 50px;
+    float:right
+}
+.movieDate{
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    color: white;
+    background-color: rgba(10,10,10, 0.4);
+    font-size: 14px  !important;
+    font-weight: bold !important;
+}
+.boxContent{
+text-align: center;
+align-items: center;
+height: 70px;
+font-size: 14px;
+font-weight: bold;
+background-color: rgba(10,10,10, 0.8)  !important;
+color:white
+}
+.boxRate{
+    font-size: small;
+    font-weight: normal;
+    display: inline-flex; 
+}
+.title{
+    height: 55%;
+    padding: 5px 0;
+}
+.skeletonTitle{
+    height: 10px  !important;
+    text-align: center !important;
+    margin: 20px !important;
+}
+.skeletonBoxRate{
+    align-items: center;
+    display: flex ;
+    justify-content: center;
 }
