--- a/components/Layout/footer.module.css
+++ b/components/Layout/footer.module.css
@@ -4,6 +4,6 @@
     justify-content: space-between;
     align-items: baseline;
     padding: 1rem 10%;
-    height: 10rem;
+    height: 10vh;
     background-color: #202020;
   }
