--- a/components/Layout/header.module.css
+++ b/components/Layout/header.module.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     align-items: baseline;
     padding: 1rem 10%;
-    height: 5rem;
+    height: 8vh;
     background-color: #202020;
   }
   
